--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CoffeeCounter</string>
-    <string name="edit_message">Enter a message!</string>
-    <string name="button_send">Send!</string>
     <string name="button_coffee">Drink Coffee!</string>
+    <string name="button_showInterstitial_coffee">Play Ad, collect beans!</string>
+
 </resources>
