Add additional activity (loads once on start) that displays a MREC video to provide testability to 300x250 banners / videos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="coffee_bean_count">%1$d beans</string>
     <string name="coffee_bean_increment_amount">You earned %1$d beans! Thanks for joining us on your coffee break.</string>
 
+    <string name="sip_welcome">Welcome to CoffeeCounter! Sip and enjoy.</string>
+    <string name="begin_drink">Begin Caffeination Sequence</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="element_text">Dessert</string>
