Add an automated testing function in the GlobalClass to easily test interstitials / banners in the 300x250 space
Function will grab a plc from the placement array and test them all in order. It will toast and report back the status.
Minor UI changes / updates and code cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="coffee_bean_count">%1$d beans</string>
     <string name="coffee_bean_increment_amount">You earned %1$d beans! Thanks for joining us on your coffee break.</string>
 
-    <string name="sip_welcome">Welcome to CoffeeCounter! Sip and enjoy.</string>
+    <string name="sip_welcome">Welcome to CoffeeCounter!</string>
     <string name="begin_drink">Begin Caffeination Sequence</string>
 
     <!-- TODO: Remove or change this placeholder text -->
