--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">CoffeeCounter</string>
     <string name="button_coffee">Break time! Drink Coffee!</string>
-    <string name="button_stats">View Detailed Stats</string>
+    <string name="button_stats">Stats (MREC Test)</string>
+    <string name="button_dessert">Dessert Menu (Recycler Test) </string>
     <string name="button_loadBanner">PreLoad Banner</string>
     <string name="button_showBanner">Show Preloaded Banner</string>
 
@@ -20,7 +21,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="element_text">Dessert</string>
+    <string name="element_text">Coffee</string>
 
     <!--GDPR Specific, credits to https://github.com/MFlisar/GDPRDialog -->
 
