--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">CoffeeCounter</string>
+    <string name="app_name">Coffee Counter</string>
+    <string name="button_settings">Modify / View App Settings</string>
     <string name="button_coffee">Break time! Drink Coffee!</string>
     <string name="button_stats">Stats (MREC Test)</string>
     <string name="button_dessert">Dessert Menu (Recycler Test) </string>
