Created new activity for testing simultaneous refresh
CoffeeRadio activity created to test scnearios where we may have 2 banners refresh simultaneously
Initially both banners will be created, causing a potential conflict where the singleton adapters will cause undesired behavior
Currently implemented solution kills the bottom banner on onWindowFocusChanged detection and only shows it after some delay (currently 7000ms / 7s)
Created 2 seperate listeners to clearly ID which one is being utilized at any giuven time
After returning from background, introduced delay will ensure AD_IMPRESSION event does not overlap
Note: the intended solution should allow for pause/play to be run to stop refresh. Currently does not appear to be the case as it appears to be called automatically

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">Coffee Counter</string>
     <string name="button_settings">Modify / View App Settings</string>
     <string name="button_coffee">Break time! Drink Coffee!</string>
-    <string name="button_stats">Stats (MREC Test)</string>
-    <string name="button_dessert">Dessert Menu (Recycler Test) </string>
+    <string name="button_stats">Stats (Context Test)</string>
+    <string name="button_dessert">Dessert (Recycler Test) </string>
+    <string name="button_radio">Radio (Multi Adapter Test) </string>
     <string name="button_loadBanner">PreLoad Banner</string>
     <string name="button_showBanner">Show Preloaded Banner</string>
 
