--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">Coffee Counter</string>
     <string name="button_settings">Modify / View App Settings</string>
     <string name="button_coffee">Break time! Drink Coffee!</string>
-    <string name="button_stats">Stats (Context Test)</string>
+    <string name="button_stats">Stats (Banner Context Test)</string>
+    <string name="button_int">Shock (Int Context Test)</string>
     <string name="button_dessert">Dessert (Recycler Test) </string>
     <string name="button_radio">Radio (Multi Adapter Test) </string>
-    <string name="button_loadBanner">PreLoad Banner</string>
+    <string name="button_loadBanner">Preload Banner</string>
     <string name="button_showBanner">Show Preloaded Banner</string>
 
     <string name="gdprconsentview_notConsent_detailed">You have not consented to EU GDPR requirements. As such, if you are in the EU, the content we show may not be as accurate. Thank you for your understanding.</string>
